--- a/css/main.css
+++ b/css/main.css
@@ -4280,7 +4280,12 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-@media (min-width: 1200px) and (max-width: 1499px) {
+@media (min-width: 1400px) and (max-width: 1499px) {
+  .header .header-menu .menu__nav a {
+    padding: 9px 9px;
+  }
+}
+@media (min-width: 1200px) and (max-width: 1399px) {
   .header .header-menu .menu__nav a {
     padding: 6px 6px;
   }
